trying to get images to work

--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
       <h2>Services</h2>
       <section class="services-container">
         <article class="services-card card">
-          <img class="services-card-img" src="/assets/newHomeSq.jpg" alt="">
-          <a href="/view/newBuild.html">NEW HOMES</a>
+          <img class="services-card-img" src="./assets/newHomeSq.jpg" alt="">
+          <a href="./view/newBuild.html">NEW HOMES</a>
           <P>We build beautiful, elegant homes custom-designed to meet your needs. We handle all the details from
             ideation to framing and subcontracting. Count on our construction management professionals to bring your
             dream to life.</P>
         </article>
         <article class="services-card card">
-          <img class="services-card-img" src="/assets/remodelSq.jpg" alt="">
-          <a href="/view/renovation.html">MAJOR REMODELS</a>
+          <img class="services-card-img" src="./assets/remodelSq.jpg" alt="">
+          <a href="./view/renovation.html">MAJOR REMODELS</a>
           <P>When you are updating, remodeling or adding to your home, you deserve the best in quality and
             craftsmanship. Our services include additions, garages, bathrooms and kitchens, and completed basements,
             from foundations to framing and finish carpentry.</P>
           </P>
         </article>
         <article class="services-card card">
-          <img class="services-card-img" src="/assets/outdoorSq.jpg" alt="">
-          <a href="/view/outdoor.html">DECKS AND OUTDOOR LIVING</a>
+          <img class="services-card-img" src="./assets/outdoorSq.jpg" alt="">
+          <a href="./view/outdoor.html">DECKS AND OUTDOOR LIVING</a>
           <P>There is no better way to enjoy a Northern Utah sunrise or stunning sunset than by sitting on your own
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
             balconies, covered decks and spa spaces.</P>
