ATF design - finished the ui for the form.

--- a/index.html
+++ b/index.html
@@ -2,67 +2,69 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style/index.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/index.css">
   <title>KP Builders | Home</title>
 </head>
 
 <body>
   <header>
     <div class="color-overlay">
-    <div class="nav-container">
-      <a href="index.html"><img class="nav-logo" src="./assets/logo.svg" alt="Business Logo" /></a>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
-          <li>Portfolio</li>
-          <li>FAQs</li>
-          <li>Contact</li>
-          <li class="nav-btn">Appointment</li>
-        </ul>
-      </nav>
-    </div>
-    <section class="hero-container">
-      <div class="header-title-container">
-        <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
-        <h1>YOUR VISION, OUR EXPERTISE</h1>
-        <p>
-          KP Builders is a Utah General Contracting Firm specializing in the Northern Utah area. Fully licensed and insured, our Utah firm specializes in residential projects, including custom-built homes, major remodels and additions, and decks. 
-        </p>
+      <div class="nav-container">
+        <a href="index.html"><img class="nav-logo" src="./assets/logo.svg" alt="Business Logo" /></a>
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Portfolio</li>
+            <li>FAQs</li>
+            <li>Contact</li>
+            <li class="nav-btn">Appointment</li>
+          </ul>
+        </nav>
       </div>
-      <div class="header-form-container">
-        <h2>Make an inquiry</h2>
-        <form>
-          <div>
-            <label for="name"></label>
-            <input type="text" id="name" placeholder="Name*" required />
-          </div>
-          <div>
-            <label for=""></label>
-            <input type="email" id="email" placeholder="email" />
-          </div>
-          <div>
+      <section class="hero-container">
+        <div class="header-title-container">
+          <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
+          <h1>YOUR VISION, OUR EXPERTISE</h1>
+          <p>
+            KP Builders is a Utah General Contracting Firm specializing in the Northern Utah area. Fully licensed and
+            insured, our Utah firm specializes in residential projects, including custom-built homes, major remodels and
+            additions, and decks.
+          </p>
+        </div>
+        <div class="header-form-container">
+
+          <form>
+            <h2>MAKE AND INQUIRY</h2>
+            <label for="name">
+              <input type="text" id="name" placeholder="Name*" required />
+            </label>
+            <label for="">
+              <input type="email" id="email" placeholder="email" />
+            </label>
             <label for=""></label>
             <input type="tel" id="phone" placeholder="Phone*" required />
-          </div>
-          <select name="jobType" id="jobType" required>
-            <option value="" disabled>--Please choose an option--</option>
-            <option value="bathroom">Bathroom</option>
-            <option value="bedroom">Bedroom</option>
-            <option value="kitchen">Kitchen</option>
-            <option value="deck">Deck</option>
-            <option value="concrete">Concrete</option>
-            <option value="other">Other</option>
-          </select>
-          <textarea name="additionalDetails" cols="30" rows="6" placeholder="Additional details"></textarea>
-        </form>
-        <div>Or Call:<a href="tel:+18019419503">801-941-9503</a></div>
-      </div>
-    </section>
-  </div>
+            </label>
+            <select name="jobType" id="jobType" required>
+              <option value="" selected disabled>--Please choose an option--</option>
+              <option value="bathroom">Bathroom</option>
+              <option value="bedroom">Bedroom</option>
+              <option value="kitchen">Kitchen</option>
+              <option value="deck">Deck</option>
+              <option value="concrete">Concrete</option>
+              <option value="other">Other</option>
+            </select>
+            <textarea name="additionalDetails" cols="30" rows="6" placeholder="Additional details"></textarea>
+            <button type="submit" href="/">Send Message</button>
+            <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
+          </form>
+
+        </div>
+      </section>
+    </div>
   </header>
   <main>
     <article class="about-us-container">
