adjusted style further.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section class="hero-container">
         <div class="header-title-container">
           <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
-          <h1>YOUR VISION, OUR EXPERTISE</h1>
+          <h1>YOUR VISION, <br>OUR EXPERTISE</h1>
           <p>
             KP Builders is a Utah General Contracting Firm specializing in the Northern Utah area. Fully licensed and
             insured, our Utah firm specializes in residential projects, including custom-built homes, major remodels and
@@ -36,7 +36,6 @@
           </p>
         </div>
         <div class="header-form-container">
-
           <form>
             <h2>MAKE AND INQUIRY</h2>
             <label for="name">
@@ -52,9 +51,9 @@
               <option value="" selected disabled>--Please choose an option--</option>
               <option value="bathroom">Bathroom</option>
               <option value="bedroom">Bedroom</option>
-              <option value="kitchen">Kitchen</option>
-              <option value="deck">Deck</option>
               <option value="concrete">Concrete</option>
+              <option value="deck">Deck</option>
+              <option value="kitchen">Kitchen</option>
               <option value="other">Other</option>
             </select>
             <textarea name="additionalDetails" cols="30" rows="6" placeholder="Additional details"></textarea>
