updated the cta style

--- a/index.html
+++ b/index.html
@@ -66,39 +66,43 @@
     </div>
   </header>
   <main>
-    <article class="about-us-container">
-      <h2>Utah Construction You Can Trust</h2>
-      <p>
-        KP Builders brings decades of excellence to construction projects in
-        and around Northern Utah, from Ogden to Brigham City to Layton. Our
-        founder, Kenny Palmer, started his building career while still in high
-        school. Since then, he has earned a reputation for being trustworthy
-        and respectful in all his ventures.<br />
+    <div class="about-wrapper">
+      <section class="about-us-container">
+        <h2>Utah Construction You Can Trust</h2>
+        <p>
+          KP Builders brings decades of excellence to construction projects in
+          and around Northern Utah, from Ogden to Brigham City to Layton. Our
+          founder, Kenny Palmer, started his building career while still in high
+          school. Since then, he has earned a reputation for being trustworthy
+          and respectful in all his ventures.<br /><br />
 
-        Since learning to build new homes and additions early in his career,
-        Kenny has focused on various aspects of the construction trade,
-        including framing and concrete, finish carpentry, outdoor signage and
-        additions. Kenny takes the lead on each project to get it done right
-        the first time. That means meeting your expectations, staying within
-        your budget and ensuring that all the legal details and permits are in
-        place.
-        <br />
+          Since learning to build new homes and additions early in his career,
+          Kenny has focused on various aspects of the construction trade,
+          including framing and concrete, finish carpentry, outdoor signage and
+          additions. Kenny takes the lead on each project to get it done right
+          the first time. That means meeting your expectations, staying within
+          your budget and ensuring that all the legal details and permits are in
+          place.
+          <br /><br />
 
-        Often, KP Builders hires subcontractors to help us complete jobs on
-        time and on budget. As a fully licensed and insured construction
-        management team, we do the research, analyze bids, vet company
-        reputations and manage timelines to provide an end result you will
-        love.
-        <br />
-      </p>
-      <picture><img src="" alt="" class="src" /></picture>
-    </article>
-    <section class="cta-container">
-      <h2></h2>
-      <p></p>
-      <a href="" class="cta-btn"></a>
-    </section>
-    <div class="services-wrapper">
+          Often, KP Builders hires subcontractors to help us complete jobs on
+          time and on budget. As a fully licensed and insured construction
+          management team, we do the research, analyze bids, vet company
+          reputations and manage timelines to provide an end result you will
+          love.
+          <br /><br />
+        </p>
+        <picture><img src="" alt="" class="src" /></picture>
+      </section>
+    </div>
+    <div class="cta-wrapper wrapper">
+      <section class="cta-container">
+        <h2>Want to chat?</h2>
+        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in remodels, additions, decks and new homes in Northern Utah.  Reach out with questions, bid requests, or just to say hello!</p>
+        <a href="/view/contact.html" class="cta-btn">Let's chat</a>
+      </section>
+    </div>
+    <div class="services-wrapper wrapper">
       <h2>Services</h2>
       <section class="services-container">
         <article class="services-card card">
@@ -125,21 +129,23 @@
           </P>
       </section>
     </div>
-    <section class="testimonials">
-      <picture>
-        <source />
-        <img src="" alt="" />
-      </picture>
-      <div class="testimonial-intro">
-        <h2>Hear From Homeowners Like You</h2>
-        <!-- <p>At KP Builders, we work hard every day to bring your vision to life. We start with your wants and needs, then
-          handle all the details of design, construction and permitting. But you don’t have to take our word for it!</p> -->
-      </div>
-      <div class="testimonial-container">
+    <div class="testimonials-wrapper wrapper">
+      <h2>Hear From Homeowners Like You</h2>
+      <section class="testimonial-container">
+        <!-- <picture>
+          <source />
+          <img src="" alt="" />
+        </picture>
+        <div class="testimonial-intro">
+          <h2>Hear From Homeowners Like You</h2>
+          <p>At KP Builders, we work hard every day to bring your vision to life. We start with your wants and needs, then
+          handle all the details of design, construction and permitting. But you don’t have to take our word for it!</p>
+        </div> -->
         <div class="testimonial-card card">
           <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
             communicated with us on every step to be sure things were done the way we wanted. The final price ended up
-            being a bit less than the quote because of a change we made that ended up using less materials. He was very
+            being a bit less than the quote because of a change we made that ended up using less materials. He was
+            very
             professional and made sure everything was done to code. He arranged the inspection with the city, and it
             passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor
             living space!”</p>
@@ -148,26 +154,31 @@
         </div>
         <div class="testimonial-card card">
           <p>“Kenny was great. He did the cement floor of our home addition. We were trying to do as much of our
-            addition ourselves but when it came to the flat work of the cement, it was very intimidating. We asked Kenny
-            for help and he was able to work out his schedule to help us meet ours. He helped getting the area prepared.
+            addition ourselves but when it came to the flat work of the cement, it was very intimidating. We asked
+            Kenny
+            for help and he was able to work out his schedule to help us meet ours. He helped getting the area
+            prepared.
             His work was very professional and we are very pleased with the final results.”</p>
           <strong>Julie Kay</strong>
           <p class="testimonial-sub">-Homeowner</p>
         </div>
         <div class="testimonial-card card">
-          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with him.
+          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
+            him.
             I love working with him.”</p>
           <strong>Alan Karras</strong>
           <p class="testimonial-sub">-Real Estate and Construction Professional </p>
           <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
         </div>
-      </div>
-    </section>
-    <section class="cta-container">
-      <h2></h2>
-      <p></p>
-      <a href="" class="cta-btn"></a>
-    </section>
+      </section>
+    </div>
+    <div class="cta-wrapper wrapper">
+      <section class="cta-container">
+        <h2>Want to chat?</h2>
+        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in remodels, additions, decks and new homes in Northern Utah.  Reach out with questions, bid requests, or just to say hello!</p>
+        <a href="/view/contact.html" class="cta-btn">Let's chat</a>
+      </section>
+    </div>
   </main>
   <footer></footer>
 </body>
