STYLE: updated styling added some functionality

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <header>
     <div class="color-overlay">
       <div class="nav-container">
-        <a href="index.html"><img class="nav-logo" src="./assets/logo.svg" alt="Business Logo" /></a>
+        <a href="index.html"><img class="nav-logo" src="./assets/KPLogo.png" alt="Business Logo" /></a>
         <nav>
           <ul>
-            <li>Home</li>
-            <li>About</li>
+            <!-- <li>Home</li> -->
+            <a class="nav" href="#about-wrapper"><li>About</li></a>
             <li>Services</li>
             <li>Portfolio</li>
             <li>FAQs</li>
@@ -66,7 +66,7 @@
     </div>
   </header>
   <main>
-    <div class="about-wrapper">
+    <div class="about-wrapper" id="about-wrapper">
       <section class="about-us-container">
         <h2>Utah Construction You Can Trust</h2>
         <p>
@@ -132,15 +132,6 @@
     <div class="testimonials-wrapper wrapper">
       <h2>Hear From Homeowners Like You</h2>
       <section class="testimonial-container">
-        <!-- <picture>
-          <source />
-          <img src="" alt="" />
-        </picture>
-        <div class="testimonial-intro">
-          <h2>Hear From Homeowners Like You</h2>
-          <p>At KP Builders, we work hard every day to bring your vision to life. We start with your wants and needs, then
-          handle all the details of design, construction and permitting. But you don’t have to take our word for it!</p>
-        </div> -->
         <div class="testimonial-card card">
           <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
             communicated with us on every step to be sure things were done the way we wanted. The final price ended up
@@ -153,6 +144,14 @@
           <p class="testimonial-sub">-Homeowner</p>
         </div>
         <div class="testimonial-card card">
+          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
+            him.
+            I love working with him.”</p>
+          <strong>Alan Karras</strong>
+          <p class="testimonial-sub">-Real Estate and Construction Professional </p>
+          <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
+        </div>
+        <div class="testimonial-card card">
           <p>“Kenny was great. He did the cement floor of our home addition. We were trying to do as much of our
             addition ourselves but when it came to the flat work of the cement, it was very intimidating. We asked
             Kenny
@@ -162,14 +161,7 @@
           <strong>Julie Kay</strong>
           <p class="testimonial-sub">-Homeowner</p>
         </div>
-        <div class="testimonial-card card">
-          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
-            him.
-            I love working with him.”</p>
-          <strong>Alan Karras</strong>
-          <p class="testimonial-sub">-Real Estate and Construction Professional </p>
-          <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
-        </div>
+        
       </section>
     </div>
     <div class="cta-wrapper wrapper">
