STYLE: hero image issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <!-- <li>Home</li> -->
-            <a class="nav" href="#about-wrapper"><li>About</li></a>
+            <li><a href="#about-wrapper">About</a></li>
             <li>Services</li>
             <li>Portfolio</li>
             <li>FAQs</li>
