updated some files, created portfolio page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="./style/index.css">
   <title>KP Builders | Home</title>
 </head>
 
@@ -17,10 +17,10 @@
           <ul>
             <!-- <li>Home</li> -->
             <li><a href="#about-wrapper">About</a></li>
-            <li>Services</li>
-            <li>Portfolio</li>
+            <li><a href="#services-wrapper">Services</a></li>
+            <li><a href="./view/portfolio.html">Portfolio</a></li>
             <li>FAQs</li>
-            <li>Contact</li>
+            <li><a href="#cta-wrapper">Contact</a></li>
             <li class="nav-btn">Appointment</li>
           </ul>
         </nav>
@@ -95,14 +95,14 @@
         <picture><img src="" alt="" class="src" /></picture>
       </section>
     </div>
-    <div class="cta-wrapper wrapper">
+    <div class="cta-wrapper wrapper" id="cta-wrapper">
       <section class="cta-container">
         <h2>Want to chat?</h2>
         <p>We are excited to chat with you about your next project. We know that your home is important to you, and that makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in remodels, additions, decks and new homes in Northern Utah.  Reach out with questions, bid requests, or just to say hello!</p>
-        <a href="/view/contact.html" class="cta-btn">Let's chat</a>
+        <a href="/view/contact.html" id="cta-btn" class="cta-btn">Let's chat</a>
       </section>
     </div>
-    <div class="services-wrapper wrapper">
+    <div class="services-wrapper wrapper" id="services-wrapper">
       <h2>Services</h2>
       <section class="services-container">
         <article class="services-card card">
@@ -127,6 +127,7 @@
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
             balconies, covered decks and spa spaces.</P>
           </P>
+          </Article>
       </section>
     </div>
     <div class="testimonials-wrapper wrapper">
