--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
         <a href="index.html"><img class="nav-logo" src="./assets/KPLogo.png" alt="Business Logo" /></a>
         <nav>
           <ul>
-            <!-- <li>Home</li> -->
             <li><a href="#about-wrapper">About</a></li>
             <li><a href="#services-wrapper">Services</a></li>
-            <li><a href="./view/portfolio.html">Portfolio</a></li>
-            <li>FAQs</li>
-            <li><a href="#cta-wrapper">Contact</a></li>
-            <li class="nav-btn">Appointment</li>
+            <li><a href="#testimonial-wrapper">Tesimonials</a></li>
+            <li><a href="#faq-wrapper">FAQs</a></li>
+            <li class="nav-btn">Contact</li>
           </ul>
         </nav>
       </div>
@@ -36,18 +34,18 @@
           </p>
         </div>
         <div class="header-form-container">
-          <form>
+          <form action="https://formsubmit.co/99ac8d502401381637abc5540601e1ca" method="POST">
             <h2>MAKE AND INQUIRY</h2>
             <label for="name">
-              <input type="text" id="name" placeholder="Name*" required />
+              <input type="text" name="Name" id="name" placeholder="Name*" required />
             </label>
             <label for="">
-              <input type="email" id="email" placeholder="email" />
+              <input type="email" name="email" id="email" placeholder="email" />
             </label>
             <label for=""></label>
-            <input type="tel" id="phone" placeholder="Phone*" required />
+            <input type="tel" name="phone" id="phone" placeholder="Phone*" required />
             </label>
-            <select name="jobType" id="jobType" required>
+            <select name="Job Type" id="jobType" required>
               <option value="" selected disabled>--Please choose an option--</option>
               <option value="bathroom">Bathroom</option>
               <option value="bedroom">Bedroom</option>
@@ -56,9 +54,14 @@
               <option value="kitchen">Kitchen</option>
               <option value="other">Other</option>
             </select>
-            <textarea name="additionalDetails" cols="30" rows="6" placeholder="Additional details"></textarea>
-            <button type="submit" href="/">Send Message</button>
+            <textarea name="Additional Details" cols="30" rows="6" placeholder="Additional details"></textarea>
+            <button type="submit">Send Message</button>
             <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
+            <input type="hidden" name="_template" value="table">
+            <!-- Need to update after site is created. -->
+            <input type="hidden" name="_next" value="https://www.mattpalmer.dev">
+            <input type="hidden" name="_subject" value="KP Builders Communication Request">
+            <!-- Too see other hidden field options and to learn about creating an archive go to: https://formsubmit.co/documentation -->
           </form>
 
         </div>
@@ -95,10 +98,14 @@
         <picture><img src="" alt="" class="src" /></picture>
       </section>
     </div>
-    <div class="cta-wrapper wrapper" id="cta-wrapper">
+    <div class="cta-wrapper" id="cta-wrapper">
+      <img class="cta-headshot" src="assets/headshot.jpg" alt="Headshot of contractor">
       <section class="cta-container">
-        <h2>Want to chat?</h2>
-        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in remodels, additions, decks and new homes in Northern Utah.  Reach out with questions, bid requests, or just to say hello!</p>
+        <h2 class="cta-h2">Want to chat?</h2>
+        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that
+          makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in
+          remodels, additions, decks and new homes in Northern Utah. Reach out with questions, bid requests, or just to
+          say hello!</p>
         <a href="/view/contact.html" id="cta-btn" class="cta-btn">Let's chat</a>
       </section>
     </div>
@@ -127,10 +134,63 @@
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
             balconies, covered decks and spa spaces.</P>
           </P>
-          </Article>
+        </Article>
       </section>
     </div>
-    <div class="testimonials-wrapper wrapper">
+    <div class="faq-wrapper wrapper" id="faq-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <section class="faq-container">
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+        <div class="faq-card ">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
+            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
+            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
+            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
+            repellendus beatae, praesentium quod.</p>
+        </div>
+      </section>
+    </div>
+    <div class="testimonials-wrapper wrapper" id="testimonial-wrapper">
       <h2>Hear From Homeowners Like You</h2>
       <section class="testimonial-container">
         <div class="testimonial-card card">
@@ -162,13 +222,16 @@
           <strong>Julie Kay</strong>
           <p class="testimonial-sub">-Homeowner</p>
         </div>
-        
       </section>
     </div>
-    <div class="cta-wrapper wrapper">
+    <div class="cta-wrapper">
+      <img class="cta-headshot" src="assets/headshot.jpg" alt="Headshot of contractor">
       <section class="cta-container">
-        <h2>Want to chat?</h2>
-        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in remodels, additions, decks and new homes in Northern Utah.  Reach out with questions, bid requests, or just to say hello!</p>
+        <h2 class="cta-h2">Want to chat?</h2>
+        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that
+          makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in
+          remodels, additions, decks and new homes in Northern Utah. Reach out with questions, bid requests, or just to
+          say hello!</p>
         <a href="/view/contact.html" class="cta-btn">Let's chat</a>
       </section>
     </div>
