Created Thanks page.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#services-wrapper">Services</a></li>
             <li><a href="#testimonial-wrapper">Tesimonials</a></li>
             <li><a href="#faq-wrapper">FAQs</a></li>
-            <li class="nav-btn">Contact</li>
+            <li class="nav-btn"><a href="../view/contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -59,7 +59,7 @@
             <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
             <input type="hidden" name="_template" value="table">
             <!-- Need to update after site is created. -->
-            <input type="hidden" name="_next" value="https://www.mattpalmer.dev">
+            <input type="hidden" name="_next" value="mattpalmers.site/view/thanks.html">
             <input type="hidden" name="_subject" value="KP Builders Communication Request">
             <!-- Too see other hidden field options and to learn about creating an archive go to: https://formsubmit.co/documentation -->
           </form>
