header responsiveness. still need smallest screens - Messy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/index.css">
+  <script src="resize.js"></script>
   <title>KP Builders | Home</title>
 </head>
 
@@ -23,6 +24,7 @@
           </ul>
         </nav>
       </div>
+    <img class="mb-header" src="./assets/hero.jpg" alt="New Home">
       <section class="hero-container">
         <div class="header-title-container">
           <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
@@ -59,7 +61,7 @@
             <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
             <input type="hidden" name="_template" value="table">
             <!-- Need to update after site is created. -->
-            <input type="hidden" name="_next" value="mattpalmers.site/view/thanks.html">
+            <input type="hidden" name="_next" value="https://www.mattpalmers.site/view/thanks.html">
             <input type="hidden" name="_subject" value="KP Builders Communication Request">
             <!-- Too see other hidden field options and to learn about creating an archive go to: https://formsubmit.co/documentation -->
           </form>
