cleaned up responsive features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="color-overlay">
       <div class="nav-container">
-        <a href="index.html"><img class="nav-logo" src="./assets/KPLogo.png" alt="Business Logo" /></a>
+        <a href="index.html"><img class="nav-logo" src="./assets/KPLogoLBlue.png" alt="Business Logo" /></a>
         <nav>
           <ul>
             <li><a href="#about-wrapper">About</a></li>
@@ -24,7 +24,6 @@
           </ul>
         </nav>
       </div>
-    <img class="mb-header" src="./assets/hero.jpg" alt="New Home">
       <section class="hero-container">
         <div class="header-title-container">
           <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
@@ -127,7 +126,6 @@
           <P>When you are updating, remodeling or adding to your home, you deserve the best in quality and
             craftsmanship. Our services include additions, garages, bathrooms and kitchens, and completed basements,
             from foundations to framing and finish carpentry.</P>
-          </P>
         </article>
         <article class="services-card card">
           <img class="services-card-img" src="./assets/outdoorSq.jpg" alt="">
@@ -135,7 +133,6 @@
           <P>There is no better way to enjoy a Northern Utah sunrise or stunning sunset than by sitting on your own
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
             balconies, covered decks and spa spaces.</P>
-          </P>
         </Article>
       </section>
     </div>
