Updated nav on index, and updated Thanks, and contact pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/index.css">
-  <script src="resize.js"></script>
+  <script defer src="./js/date.js"></script>
   <title>KP Builders | Home</title>
 </head>
 
@@ -235,7 +235,9 @@
       </section>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div> &copy; <span id='year'></span> | Created by <a target="_blank" href="https://www.mattpalmer.dev">Matt Palmer</a> | Ogden Utah</div>
+</footer>
 </body>
 
 </html>
