Added Process section, initial styling.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/index.css">
   <script defer src="./js/date.js"></script>
+  <script defer src="./js/collapse.js"></script>
   <title>KP Builders | Home</title>
 </head>
 
@@ -30,8 +31,7 @@
           <h1>YOUR VISION, <br>OUR EXPERTISE</h1>
           <p>
             KP Builders is a Utah General Contracting Firm specializing in the Northern Utah area. Fully licensed and
-            insured, our Utah firm specializes in residential projects, including custom-built homes, major remodels and
-            additions, and decks.
+            insured, our Utah firm specializes in residential projects, including major remodels, additions, and decks.
           </p>
         </div>
         <div class="header-form-container">
@@ -75,22 +75,20 @@
         <h2>Utah Construction You Can Trust</h2>
         <p>
           KP Builders brings decades of excellence to construction projects in
-          and around Northern Utah, from Ogden to Brigham City to Layton. Our
-          founder, Kenny Palmer, started his building career while still in high
-          school. Since then, he has earned a reputation for being trustworthy
-          and respectful in all his ventures.<br /><br />
+          and around Northern Utah. Our founder, Kenny Palmer, started his building career while still in high school.
+          Since then, he has earned a reputation for being trustworthy and respectful in all his ventures.<br /><br />
 
           Since learning to build new homes and additions early in his career,
           Kenny has focused on various aspects of the construction trade,
-          including framing and concrete, finish carpentry, outdoor signage and
+          including framing, concrete, finish carpentry, outdoor signage and
           additions. Kenny takes the lead on each project to get it done right
           the first time. That means meeting your expectations, staying within
-          your budget and ensuring that all the legal details and permits are in
+          your budget, and ensuring that all the legal details and permits are in
           place.
           <br /><br />
 
-          Often, KP Builders hires subcontractors to help us complete jobs on
-          time and on budget. As a fully licensed and insured construction
+          Often, KP Builders hires subcontractors to help us complete jobs efficiently. As a fully licensed and insured
+          construction
           management team, we do the research, analyze bids, vet company
           reputations and manage timelines to provide an end result you will
           love.
@@ -104,8 +102,8 @@
       <section class="cta-container">
         <h2 class="cta-h2">Want to chat?</h2>
         <p>We are excited to chat with you about your next project. We know that your home is important to you, and that
-          makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in
-          remodels, additions, decks and new homes in Northern Utah. Reach out with questions, bid requests, or just to
+          makes it important to us. Thanks for your interest in KP Builders construction services. We spend our time on
+          basements, remodels, additions, and decks in Northern Utah. Reach out with questions, bid requests, or just to
           say hello!</p>
         <a href="/view/contact.html" id="cta-btn" class="cta-btn">Let's chat</a>
       </section>
@@ -115,10 +113,10 @@
       <section class="services-container">
         <article class="services-card card">
           <img class="services-card-img" src="./assets/newHomeSq.jpg" alt="">
-          <a href="#">NEW HOMES</a>
-          <P>We build beautiful, elegant homes custom-designed to meet your needs. We handle all the details from
-            ideation to framing and subcontracting. Count on our construction management professionals to bring your
-            dream to life.</P>
+          <a href="#">BASEMENTS</a>
+          <P>We build beautiful custom-designed basements to meet your needs. We handle all the details from design to
+            framing and subcontracting. Count on our construction management professionals to bring your dream to life.
+          </P>
         </article>
         <article class="services-card card">
           <img class="services-card-img" src="./assets/remodelSq.jpg" alt="">
@@ -136,7 +134,99 @@
         </Article>
       </section>
     </div>
-    <div class="faq-wrapper wrapper" id="faq-wrapper">
+    <div class="process-wrapper wrapper" id="process-wrapper">
+      <button class="collapse" type="button">1. Initial Meeting</button>
+      <div class="collapse-content">
+        <ul class="process-steps">
+          <li>Review overall project</li>
+          <li>Take Measurements</li>
+          <li>Discuss anticipated budget and deadlines</li>
+          <li>Exchange contact information</li>
+        </ul>
+      </div>
+      <button class="collapse" type="button">2. Design and Pricing</button>
+      <div class="collapse-content">
+        <ul class="process-steps">
+          <li>Consult with governing agency</li>
+          <li>Produce Drawings and Estimate</li>
+          <li>Approve Drawings</li>
+          <li>Down Payment Due</li>
+          <li>Secure Building permit from city</li>
+        </ul>
+      </div>
+      <button class="collapse" type="button">3. Rough Construction and Inspection</button>
+      <div class="collapse-content">
+        <ul class="process-steps">
+          <li>Underground work</li>
+          <li>Conrete</li>
+          <li>Framing</li>
+          <li>Rough utilities</li>
+          <li>Inspection by Building Inspector</li>
+        </ul>
+      </div>
+      <button class="collapse" type="button">4. Finish Construction</button>
+      <div class="collapse-content">
+        <ul class="process-steps">
+          <li>Insulation as needed</li>
+          <li>Drywall</li>
+          <li>Finish utilities and cabinets as needed</li>
+          <li>Floor and wall treatment</li>
+        </ul>
+      </div>
+      <button class="collapse" type="button">5. Final Inspection and Payments</button>
+      <div class="collapse-content">
+        <ul class="process-steps">
+          <li>Final inspection by Building Inspector</li>
+          <li>Balance due on completion</li>
+        </ul>
+      </div>
+    </div>
+    <div class="testimonials-wrapper wrapper" id="testimonial-wrapper">
+      <h2>Hear From Homeowners Like You</h2>
+      <section class="testimonial-container">
+        <div class="testimonial-card card">
+          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
+            communicated with us on every step to be sure things were done the way we wanted. The final price ended up
+            being a bit less than the quote because of a change we made that ended up using less materials. He was
+            very
+            professional and made sure everything was done to code. He arranged the inspection with the city, and it
+            passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor
+            living space!”</p>
+          <strong>Nicole Heaton</strong>
+          <p class="testimonial-sub">-Homeowner</p>
+          <p class="emphasize">Positive Communication</p>
+        </div>
+        <div class="testimonial-card card">
+          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
+            him.
+            I love working with him.”</p>
+          <strong>Alan Karras</strong>
+          <p class="testimonial-sub">-Real Estate and Construction Professional </p>
+          <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
+        </div>
+        <div class="testimonial-card card">
+          <p>“Kenny was great. He did the cement floor of our home addition. We were trying to do as much of the
+            addition ourselves, but when it came to the concrete, it was very intimidating. We asked Kenny for help and
+            he was able to work out his schedule to help us meet ours. He helped getting the area prepared. His work was
+            very professional and we are very pleased with the final results.”</p>
+          <strong>Julie Kay</strong>
+          <p class="testimonial-sub">-Homeowner</p>
+          <p class="emphasize">Helpful and professional</p>
+        </div>
+      </section>
+    </div>
+    <div class="cta-wrapper">
+      <img class="cta-headshot" src="assets/headshot.jpg" alt="Headshot of contractor">
+      <section class="cta-container">
+        <h2 class="cta-h2">Want to chat?</h2>
+        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that
+          makes it important to us. Thanks for your interest in KP Builders construction services. We spend our time on
+          basements, remodels, additions, and decks in Northern Utah. Reach out with questions, bid requests, or just to
+          say hello!</p>
+        <a href="/view/contact.html" class="cta-btn">Let's chat</a>
+      </section>
+    </div>
+    <!-- <div class="faq-wrapper wrapper" id="faq-wrapper">
       <h2>Frequently Asked Questions</h2>
       <section class="faq-container">
         <div class="faq-card ">
@@ -188,56 +278,12 @@
             repellendus beatae, praesentium quod.</p>
         </div>
       </section>
-    </div>
-    <div class="testimonials-wrapper wrapper" id="testimonial-wrapper">
-      <h2>Hear From Homeowners Like You</h2>
-      <section class="testimonial-container">
-        <div class="testimonial-card card">
-          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
-            communicated with us on every step to be sure things were done the way we wanted. The final price ended up
-            being a bit less than the quote because of a change we made that ended up using less materials. He was
-            very
-            professional and made sure everything was done to code. He arranged the inspection with the city, and it
-            passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor
-            living space!”</p>
-          <strong>Nicole Heaton</strong>
-          <p class="testimonial-sub">-Homeowner</p>
-        </div>
-        <div class="testimonial-card card">
-          <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
-            him.
-            I love working with him.”</p>
-          <strong>Alan Karras</strong>
-          <p class="testimonial-sub">-Real Estate and Construction Professional </p>
-          <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
-        </div>
-        <div class="testimonial-card card">
-          <p>“Kenny was great. He did the cement floor of our home addition. We were trying to do as much of our
-            addition ourselves but when it came to the flat work of the cement, it was very intimidating. We asked
-            Kenny
-            for help and he was able to work out his schedule to help us meet ours. He helped getting the area
-            prepared.
-            His work was very professional and we are very pleased with the final results.”</p>
-          <strong>Julie Kay</strong>
-          <p class="testimonial-sub">-Homeowner</p>
-        </div>
-      </section>
-    </div>
-    <div class="cta-wrapper">
-      <img class="cta-headshot" src="assets/headshot.jpg" alt="Headshot of contractor">
-      <section class="cta-container">
-        <h2 class="cta-h2">Want to chat?</h2>
-        <p>We are excited to chat with you about your next project. We know that your home is important to you, and that
-          makes it important to us. Thanks for your interest in KP Builders construction services. We specialize in
-          remodels, additions, decks and new homes in Northern Utah. Reach out with questions, bid requests, or just to
-          say hello!</p>
-        <a href="/view/contact.html" class="cta-btn">Let's chat</a>
-      </section>
-    </div>
+    </div> -->
   </main>
   <footer>
-    <div> &copy; <span id='year'></span> | Created by <a target="_blank" href="https://www.mattpalmer.dev">Matt Palmer</a> | Ogden Utah</div>
-</footer>
+    <div> &copy; <span id='year'></span> | Created by <a target="_blank" href="https://www.mattpalmer.dev">Matt
+        Palmer</a> | Ogden Utah</div>
+  </footer>
 </body>
 
 </html>
