--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="KP Builders is a Utah General contracting firm specializing in remodels, additions, and outdoor structures. Visit our website today to get started.">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style/index.css">
   <script defer src="./js/date.js"></script>
   <script defer src="./js/collapse.js"></script>
@@ -14,13 +17,13 @@
   <header>
     <div class="color-overlay">
       <div class="nav-container">
-        <a href="index.html"><img class="nav-logo" src="./assets/KPLogoLBlue.png" alt="Business Logo" /></a>
+        <a href="index.html"><img class="nav-logo" src="./assets/KPLogoLBlue.png" alt="Business Logo"></a>
         <nav>
           <ul>
             <li><a href="#about-wrapper">About</a></li>
             <li><a href="#services-wrapper">Services</a></li>
             <li><a href="#testimonial-wrapper">Tesimonials</a></li>
-            <li><a href="#faq-wrapper">FAQs</a></li>
+            <li><a href="#process-wrapper">Process</a></li>
             <li class="nav-btn"><a href="../view/contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -30,7 +33,7 @@
           <h2>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h2>
           <h1>YOUR VISION, <br>OUR EXPERTISE</h1>
           <p>
-            KP Builders is a Utah General Contracting Firm specializing in the Northern Utah area. Fully licensed and
+            KP Builders is a Utah general contracting firm specializing in the Northern Utah area. Fully licensed and
             insured, our Utah firm specializes in residential projects, including major remodels, additions, and decks.
           </p>
         </div>
@@ -38,15 +41,15 @@
           <form action="https://formsubmit.co/99ac8d502401381637abc5540601e1ca" method="POST">
             <h2>MAKE AND INQUIRY</h2>
             <label for="name">
-              <input type="text" name="Name" id="name" placeholder="Name*" required />
+              <input type="text" name="name" id="name" placeholder="Name*" required >
             </label>
-            <label for="">
-              <input type="email" name="email" id="email" placeholder="email" />
+            <label for="email">
+              <input type="email" name="email" id="email" placeholder="email">
             </label>
-            <label for=""></label>
-            <input type="tel" name="phone" id="phone" placeholder="Phone*" required />
-            </label>
-            <select name="Job Type" id="jobType" required>
+            <label for="phone">
+            <input type="tel" name="phone" id="phone" placeholder="Phone*" required>
+          </label>
+            <select name="job type" id="jobType" required>
               <option value="" selected disabled>--Please choose an option--</option>
               <option value="bathroom">Bathroom</option>
               <option value="bedroom">Bedroom</option>
@@ -76,7 +79,7 @@
         <p>
           KP Builders brings decades of excellence to construction projects in
           and around Northern Utah. Our founder, Kenny Palmer, started his building career while still in high school.
-          Since then, he has earned a reputation for being trustworthy and respectful in all his ventures.<br /><br />
+          Since then, he has earned a reputation for being trustworthy and respectful in all his ventures.<br><br>
 
           Since learning to build new homes and additions early in his career,
           Kenny has focused on various aspects of the construction trade,
@@ -85,16 +88,15 @@
           the first time. That means meeting your expectations, staying within
           your budget, and ensuring that all the legal details and permits are in
           place.
-          <br /><br />
+          <br><br>
 
           Often, KP Builders hires subcontractors to help us complete jobs efficiently. As a fully licensed and insured
           construction
           management team, we do the research, analyze bids, vet company
           reputations and manage timelines to provide an end result you will
           love.
-          <br /><br />
+          <br><br>
         </p>
-        <picture><img src="" alt="" class="src" /></picture>
       </section>
     </div>
     <div class="cta-wrapper" id="cta-wrapper">
@@ -112,22 +114,22 @@
       <h2>Services</h2>
       <section class="services-container">
         <article class="services-card card">
-          <img class="services-card-img" src="./assets/newHomeSq.jpg" alt="">
-          <a href="#">BASEMENTS</a>
+          <img class="services-card-img" src="./assets/Basement.jpg" alt="newly remodeled basement">
+          <h3>BASEMENTS</h3>
           <P>We build beautiful custom-designed basements to meet your needs. We handle all the details from design to
             framing and subcontracting. Count on our construction management professionals to bring your dream to life.
           </P>
         </article>
         <article class="services-card card">
-          <img class="services-card-img" src="./assets/remodelSq.jpg" alt="">
-          <a href="#">MAJOR REMODELS</a>
+          <img class="services-card-img" src="./assets/BathroomRemodel.jpg" alt="Newly remodeled bathroom">
+          <h3>MAJOR REMODELS</h3>
           <P>When you are updating, remodeling or adding to your home, you deserve the best in quality and
             craftsmanship. Our services include additions, garages, bathrooms and kitchens, and completed basements,
             from foundations to framing and finish carpentry.</P>
         </article>
         <article class="services-card card">
-          <img class="services-card-img" src="./assets/outdoorSq.jpg" alt="">
-          <a href="#">DECKS AND OUTDOOR LIVING</a>
+          <img class="services-card-img" src="./assets/outdoorSq1.jpg" alt="Stock image of a beautiful outdoor living space">
+          <h3>DECKS AND OUTDOOR LIVING</h3>
           <P>There is no better way to enjoy a Northern Utah sunrise or stunning sunset than by sitting on your own
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
             balconies, covered decks and spa spaces.</P>
@@ -135,83 +137,89 @@
       </section>
     </div>
     <div class="process-wrapper wrapper" id="process-wrapper">
-      <button class="collapse" type="button">1. Initial Meeting</button>
-      <div class="collapse-content">
-        <ul class="process-steps">
-          <li>Review overall project</li>
-          <li>Take Measurements</li>
-          <li>Discuss anticipated budget and deadlines</li>
-          <li>Exchange contact information</li>
-        </ul>
+      <h2>What's the Process?</h2>
+      <div class="collapse-container">
+        <button class="collapse" type="button">1. Initial Meeting</button>
+        <div class="collapse-content">
+          <ul class="process-steps">
+            <li>Review overall project</li>
+            <li>Take measurements</li>
+            <li>Discuss anticipated budget and deadlines</li>
+            <li>Exchange contact information</li>
+          </ul>
+        </div>
       </div>
-      <button class="collapse" type="button">2. Design and Pricing</button>
-      <div class="collapse-content">
-        <ul class="process-steps">
-          <li>Consult with governing agency</li>
-          <li>Produce Drawings and Estimate</li>
-          <li>Approve Drawings</li>
-          <li>Down Payment Due</li>
-          <li>Secure Building permit from city</li>
-        </ul>
+      <div class="collapse-container">
+        <button class="collapse" type="button">2. Design and Pricing</button>
+        <div class="collapse-content">
+          <ul class="process-steps">
+            <li>Consult with governing agency</li>
+            <li>Produce drawings and estimate</li>
+            <li>Approve drawings</li>
+            <li>Down payment due</li>
+            <li>Secure building permit from city</li>
+          </ul>
+        </div>
       </div>
-      <button class="collapse" type="button">3. Rough Construction and Inspection</button>
-      <div class="collapse-content">
-        <ul class="process-steps">
-          <li>Underground work</li>
-          <li>Conrete</li>
-          <li>Framing</li>
-          <li>Rough utilities</li>
-          <li>Inspection by Building Inspector</li>
-        </ul>
+      <div class="collapse-container">
+        <button class="collapse" type="button">3. Rough Construction and Inspection</button>
+        <div class="collapse-content">
+          <ul class="process-steps">
+            <li>Underground work</li>
+            <li>Conrete</li>
+            <li>Framing</li>
+            <li>Rough utilities</li>
+            <li>Inspection by building inspector</li>
+          </ul>
+        </div>
       </div>
-      <button class="collapse" type="button">4. Finish Construction</button>
-      <div class="collapse-content">
-        <ul class="process-steps">
-          <li>Insulation as needed</li>
-          <li>Drywall</li>
-          <li>Finish utilities and cabinets as needed</li>
-          <li>Floor and wall treatment</li>
-        </ul>
+      <div class="collapse-container">
+        <button class="collapse" type="button">4. Finish Construction</button>
+        <div class="collapse-content">
+          <ul class="process-steps">
+            <li>Insulation as needed</li>
+            <li>Drywall</li>
+            <li>Finish utilities and cabinets as needed</li>
+            <li>Floor and wall treatment</li>
+          </ul>
+        </div>
       </div>
-      <button class="collapse" type="button">5. Final Inspection and Payments</button>
-      <div class="collapse-content">
-        <ul class="process-steps">
-          <li>Final inspection by Building Inspector</li>
-          <li>Balance due on completion</li>
-        </ul>
+      <div class="collapse-container">
+        <button class="collapse" type="button">5. Final Inspection and Payments</button>
+        <div class="collapse-content">
+          <ul class="process-steps">
+            <li>Final inspection by Building Inspector</li>
+            <li>Balance due on completion</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="testimonials-wrapper wrapper" id="testimonial-wrapper">
       <h2>Hear From Homeowners Like You</h2>
       <section class="testimonial-container">
         <div class="testimonial-card card">
-          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
-            communicated with us on every step to be sure things were done the way we wanted. The final price ended up
-            being a bit less than the quote because of a change we made that ended up using less materials. He was
-            very
-            professional and made sure everything was done to code. He arranged the inspection with the city, and it
-            passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor
-            living space!”</p>
+          <h3>Positive Communication</h3>
+          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He communicated with us on every step to be sure things were done the way we wanted. The final price ended up being a bit less than the quote because of a change we made that ended up using less materials. He was very professional and made sure everything was done to code. He arranged the inspection with the city, and it passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor living space!”</p>
           <strong>Nicole Heaton</strong>
           <p class="testimonial-sub">-Homeowner</p>
-          <p class="emphasize">Positive Communication</p>
+
         </div>
         <div class="testimonial-card card">
+          <h3>Honest, Knowledgeable, Thoughtful</h3>
           <p>“Kenny is honest, knowledgeable, thoughtful, follows through and I recommend that you do business with
             him.
             I love working with him.”</p>
           <strong>Alan Karras</strong>
           <p class="testimonial-sub">-Real Estate and Construction Professional </p>
-          <p class="emphasize">Honest, Knowledgeable, Thoughtful</p>
         </div>
         <div class="testimonial-card card">
+          <h3>Helpful and professional</h3>
           <p>“Kenny was great. He did the cement floor of our home addition. We were trying to do as much of the
             addition ourselves, but when it came to the concrete, it was very intimidating. We asked Kenny for help and
             he was able to work out his schedule to help us meet ours. He helped getting the area prepared. His work was
             very professional and we are very pleased with the final results.”</p>
           <strong>Julie Kay</strong>
           <p class="testimonial-sub">-Homeowner</p>
-          <p class="emphasize">Helpful and professional</p>
         </div>
       </section>
     </div>
@@ -226,63 +234,10 @@
         <a href="/view/contact.html" class="cta-btn">Let's chat</a>
       </section>
     </div>
-    <!-- <div class="faq-wrapper wrapper" id="faq-wrapper">
-      <h2>Frequently Asked Questions</h2>
-      <section class="faq-container">
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-        <div class="faq-card ">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veniam suscipit, fugiat unde, quisquam tenetur
-            sapiente ex delectus alias, consequatur et. Aliquid possimus quasi debitis, ratione excepturi, facere
-            tempore distinctio eos qui expedita ipsam minus molestias inventore nam velit provident veritatis iure quae
-            officiis. Placeat, corrupti autem mollitia sit, iusto dolores quibusdam nulla odit saepe molestiae
-            repellendus beatae, praesentium quod.</p>
-        </div>
-      </section>
-    </div> -->
   </main>
   <footer>
     <div> &copy; <span id='year'></span> | Created by <a target="_blank" href="https://www.mattpalmer.dev">Matt
-        Palmer</a> | Ogden Utah</div>
+        Palmer</a> | Ogden, Utah</div>
   </footer>
 </body>
 
